--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "Plume",
+  "name": "plume",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
+   "scripts": {
+    "start": "node app.js" 
   },
+  "keywords": [],
+  "author": "",
   "dependencies": {
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "bootstrap" : "~3.3.7"
-  }
+  },
+  "repository": {},
+  "description": "Polytech Paris-Sud Software Project",
+  "main": "app.js",
+  "license": "ISC"
 }
