integration template & twig

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "~4.14.0",
     "express-session": "^1.7.6",
     "mysql": "2.1.0",
-    "mysql-crud": "0.1.4"
+    "mysql-crud": "0.1.4",
+    "twig":"0.10.3"
+    
   },
   "repository": {},
   "description": "Polytech Paris-Sud Software Project",
