ajout role de l'utilisateur apres la connexion

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+#  Visual studio
+typings
+Microsoft.NodejsTools.WebRole.dll
+start_server.bat
