--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "express": "~4.14.0",
     "express-session": "^1.7.6",
     "mysql": "2.1.0",
-    "mysql-crud": "0.1.4"
-    
+    "mysql-crud": "0.1.4",
+    "bootstrap-daterangepicker": "2.1.25"
+
   },
   "repository": {},
   "description": "Polytech Paris-Sud Software Project",
